fix: properly cancel image rotation on cancel/switch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>KAZ Image Craft Demo</title>
-    <link rel="stylesheet" href="css/kaz-image-craft.css" />
+    <link rel="stylesheet" href="css/kaz-image-craft.css?v=2" />
 </head>
 
 <body>
