--- a/demo.html
+++ b/demo.html
@@ -13,13 +13,15 @@
 
   <div class="html-edit-section">
     <div class="editable-wrapper" data-preview="kaz-image-craft-preview-container">
-        <img src="img/b.jpg" class="editable-img" alt="B" width="180" name="b.jpg"/>
-        <img src="img/a.jpg" class="editable-img" alt="A" width="180" name="a.jpg"/>
-        <img src="img/c.jpg" class="editable-img" alt="A" width="180" name="a.jpg"/>
-        <img src="img/d.jpg" class="editable-img" alt="A" width="180" name="a.jpg"/>
-        <img src="img/e.jpg" class="editable-img" alt="A" width="180" name="a.jpg"/>
-        <img src="img/f.jpg" class="editable-img" alt="A" width="180" name="a.jpg"/>
-    </div>
+      <img id="kaz-img-b-0" src="img/b.jpg" class="editable-img" alt="B" width="180" name="b.jpg"/>
+      <img id="kaz-img-b-1" src="img/b.jpg" class="editable-img" alt="B" width="180" name="b.jpg"/>
+      <img id="kaz-img-a-0" src="img/a.jpg" class="editable-img" alt="A" width="180" name="a.jpg"/>
+      <img id="kaz-img-c-0" src="img/c.jpg" class="editable-img" alt="C" width="180" name="c.jpg"/>
+      <img id="kaz-img-d-0" src="img/d.jpg" class="editable-img" alt="D" width="180" name="d.jpg"/>
+      <img id="kaz-img-e-0" src="img/e.jpg" class="editable-img" alt="E" width="180" name="e.jpg"/>
+      <img id="kaz-img-f-0" src="img/f.jpg" class="editable-img" alt="F" width="180" name="f.jpg"/>
+  </div>
+  
 
 
   </div>
